tests/correct/correto10.lua
for k,_ in pairs(
  _G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
  ._G._G._G._G._G._G._G._G._G._G._G._G._G
) do
  print(k)
end