tests/error/done.lua
for i = 1, 5 done
  print("A number: " .. i)
end